--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dharanika - SEO Specialist</title>
+    <title>Dharshini - SEO Specialist</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Arial', sans-serif; line-height: 1.6; color: #333; background: #f8f9fa; }
@@ -84,7 +84,7 @@
     </div>
 
     <div class="header">
-        <h1>Dharanika</h1>
+        <h1>Dharshini</h1>
         <p>SEO Specialist | Digital Marketing Analyst</p>
     </div>
 
@@ -97,30 +97,43 @@
         </div>
 
         <div style="text-align: center; margin-bottom: 2rem;">
-            <h2>My SEO Expertise</h2>
+            <h2>My SEO Experience</h2>
         </div>
         <div class="skills">
-            <div class="skill-item">
-                <h3>🔍 SEO Audit</h3>
-                <p>Comprehensive website analysis</p>
-            </div>
-            <div class="skill-item">
-                <h3>📊 Analytics</h3>
-                <p>Data-driven performance tracking</p>
-            </div>
-            <div class="skill-item">
-                <h3>🎯 Keyword Research</h3>
-                <p>Strategic keyword planning</p>
-            </div>
-            <div class="skill-item">
-                <h3>🔧 Technical SEO</h3>
-                <p>Website optimization</p>
-            </div>
-        </div>
+            <div class="skills">
+    <div class="skill-item">
+        <h3>🔍 Google Search Console</h3>
+        <p>Performance tracking • Index coverage • URL inspection • Core Web Vitals • Mobile usability</p>
+    </div>
+   <div class="skill-item">
+        <h3>📊 Google Analytics</h3>
+        <p>Traffic analysis • User behavior • Conversion tracking • Audience insights • Goal setup</p>
+    </div>
+    <div class="skill-item">
+        <h3>⚡ SEMrush</h3>
+        <p>Site audit • Keyword research • Competitor analysis • Backlink tracking • Position monitoring</p>
+    </div>
+    <div class="skill-item">
+        <h3>🎯 On-Page SEO</h3>
+        <p>Content optimization • Meta tags • Header structure • Internal linking • Schema markup</p>
+    </div>
+    <div class="skill-item">
+        <h3>🔗 Off-Page SEO</h3>
+        <p>Link building • Local citations • Social signals • Brand mentions • Directory submissions</p>
+    </div>
+<!--    <div class="skill-item">
+        <h3>🔧 Technical SEO</h3>
+        <p>Site speed • Mobile optimization • XML sitemaps • Robots.txt • Structured data</p>
+    </div> -->
+</div>
+          
+           
+
+
     </div>
 
     <div class="footer">
-        <p>&copy; 2025 Dharanika - SEO Portfolio</p>
+        <p>&copy; 2025 Dharshini - SEO Portfolio</p>
     </div>
 </body>
 </html>
