--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Dharanika SEO Portfolio</title>
+    <title>About - Dharshini SEO Portfolio</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Arial', sans-serif; line-height: 1.6; color: #333; background: #f8f9fa; }
@@ -80,7 +80,7 @@
 
     <div class="header">
         <h1>About Me</h1>
-        <p>My SEO Journey & Expertise</p>
+        <p>My SEO Journey & Experience</p>
     </div>
 
     <div class="container">
@@ -92,10 +92,10 @@
         <div class="content-section">
             <h2>My SEO Skills</h2>
             <div class="skills-grid">
-                <div class="skill-category">
+               <!-- <div class="skill-category">
                     <h3>🔧 Technical SEO</h3>
                     <p>• Website Audits<br>• Site Speed Optimization<br>• Mobile Optimization<br>• XML Sitemaps</p>
-                </div>
+                </div> 
                 <div class="skill-category">
                     <h3>📊 Analytics</h3>
                     <p>• Google Analytics<br>• Search Console<br>• Performance Tracking<br>• Data Analysis</p>
@@ -107,19 +107,45 @@
                 <div class="skill-category">
                     <h3>🛠️ SEO Tools</h3>
                     <p>• SEMrush<br>• Google Tools<br>• Screaming Frog<br>• Moz</p>
-                </div>
+                </div> -->
+                <div class="skills">
+    <div class="skill-item">
+        <h3>🔍 Google Search Console</h3>
+        <p>Performance tracking • Index coverage • URL inspection • Core Web Vitals • Mobile usability</p>
+    </div>
+    <div class="skill-item">
+        <h3>📊 Google Analytics</h3>
+        <p>Traffic analysis • User behavior • Conversion tracking • Audience insights • Goal setup</p>
+    </div>
+    <div class="skill-item">
+        <h3>⚡ SEMrush</h3>
+        <p>Site audit • Keyword research • Competitor analysis • Backlink tracking • Position monitoring</p>
+    </div>
+    <div class="skill-item">
+        <h3>🎯 On-Page SEO</h3>
+        <p>Content optimization • Meta tags • Header structure • Internal linking • Schema markup</p>
+    </div>
+    <div class="skill-item">
+        <h3>🔗 Off-Page SEO</h3>
+        <p>Link building • Local citations • Social signals • Brand mentions • Directory submissions</p>
+    </div>
+    <div class="skill-item">
+        <h3>🔧 Technical SEO</h3>
+        <p>Site speed • Mobile optimization • XML sitemaps • Robots.txt • Structured data</p>
+    </div>
+</div>
             </div>
         </div>
 
         <div class="content-section">
             <h2>Certifications</h2>
-            <p>• Google Analytics Certification<br>• Google Search Console Fundamentals<br>• SEO Fundamentals Course<br>• Digital Marketing Certification</p>
+            <p>• Google Digital Garage <br>• SEO Foundation (Linkedin Learning) <br>• Competitor Analysis (Linkedin Learning)<br>• </p>
             <a href="contact.html" class="btn">Hire Me for SEO Projects</a>
         </div>
     </div>
 
     <div class="footer">
-        <p>&copy; 2025 Dharanika - SEO Portfolio</p>
+        <p>&copy; 2025 Dharshini - SEO Portfolio</p>
     </div>
 </body>
 </html>
