--- a/about.html
+++ b/about.html
@@ -111,27 +111,27 @@
                 <div class="skills">
     <div class="skill-item">
         <h3>🔍 Google Search Console</h3>
-        <p>Performance tracking • Index coverage • URL inspection • Core Web Vitals • Mobile usability</p>
+     <!--   <p>Performance tracking • Index coverage • URL inspection • Core Web Vitals • Mobile usability</p> -->
     </div>
     <div class="skill-item">
         <h3>📊 Google Analytics</h3>
-        <p>Traffic analysis • User behavior • Conversion tracking • Audience insights • Goal setup</p>
+     <!--   <p>Traffic analysis • User behavior • Conversion tracking • Audience insights • Goal setup</p> -->
     </div>
     <div class="skill-item">
         <h3>⚡ SEMrush</h3>
-        <p>Site audit • Keyword research • Competitor analysis • Backlink tracking • Position monitoring</p>
+     <!--   <p>Site audit • Keyword research • Competitor analysis • Backlink tracking • Position monitoring</p>-->
     </div>
     <div class="skill-item">
         <h3>🎯 On-Page SEO</h3>
-        <p>Content optimization • Meta tags • Header structure • Internal linking • Schema markup</p>
+    <!--    <p>Content optimization • Meta tags • Header structure • Internal linking • Schema markup</p> -->
     </div>
     <div class="skill-item">
         <h3>🔗 Off-Page SEO</h3>
-        <p>Link building • Local citations • Social signals • Brand mentions • Directory submissions</p>
+     <!--   <p>Link building • Local citations • Social signals • Brand mentions • Directory submissions</p>-->
     </div>
     <div class="skill-item">
         <h3>🔧 Technical SEO</h3>
-        <p>Site speed • Mobile optimization • XML sitemaps • Robots.txt • Structured data</p>
+<!--        <p>Site speed • Mobile optimization • XML sitemaps • Robots.txt • Structured data</p> -->
     </div>
 </div>
             </div>
@@ -139,8 +139,8 @@
 
         <div class="content-section">
             <h2>Certifications</h2>
-            <p>• Google Digital Garage <br>• SEO Foundation (Linkedin Learning) <br>• Competitor Analysis (Linkedin Learning)<br>• </p>
-            <a href="contact.html" class="btn">Hire Me for SEO Projects</a>
+            <p>• Google Digital Garage <br>• SEO Foundation <br>• Competitor Analysis <br></p>
+    <!--        <a href="contact.html" class="btn">Hire Me for SEO Projects</a> -->
         </div>
     </div>
 
