--- a/about.html
+++ b/about.html
@@ -110,27 +110,27 @@
                 </div> -->
                 <div class="skills">
     <div class="skill-item">
-        <h3>🔍 Google Search Console</h3>
+        <p>🔍 Google Search Console</p>
      <!--   <p>Performance tracking • Index coverage • URL inspection • Core Web Vitals • Mobile usability</p> -->
     </div>
     <div class="skill-item">
-        <h3>📊 Google Analytics</h3>
+        <p>📊 Google Analytics</p>
      <!--   <p>Traffic analysis • User behavior • Conversion tracking • Audience insights • Goal setup</p> -->
     </div>
     <div class="skill-item">
-        <h3>⚡ SEMrush</h3>
+        <p>⚡ SEMrush</p>
      <!--   <p>Site audit • Keyword research • Competitor analysis • Backlink tracking • Position monitoring</p>-->
     </div>
     <div class="skill-item">
-        <h3>🎯 On-Page SEO</h3>
+        <p>🎯 On-Page SEO</p>
     <!--    <p>Content optimization • Meta tags • Header structure • Internal linking • Schema markup</p> -->
     </div>
     <div class="skill-item">
-        <h3>🔗 Off-Page SEO</h3>
+        <p>🔗 Off-Page SEO</p>
      <!--   <p>Link building • Local citations • Social signals • Brand mentions • Directory submissions</p>-->
     </div>
     <div class="skill-item">
-        <h3>🔧 Technical SEO</h3>
+        <p>🔧 Technical SEO</p>
 <!--        <p>Site speed • Mobile optimization • XML sitemaps • Robots.txt • Structured data</p> -->
     </div>
 </div>
