--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         }
         .nav a:hover { color: #667eea; }
         
-        .container { max-width: 1200px; margin: 0 auto; padding: 2rem 1rem; }
+        .container { max-width: 1200px; margin: 0 auto; 
+                    <!--padding: 2rem 1rem;-->
+                        }
         
         .hero { 
             text-align: center;
